# datepop.final

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.beat  Dockerfile.worker  docker-compose.yml  pyproject.toml
config/: rabbitmq.conf
eagle_eye/: bluer_crawling.py  celery.py  datepop_crawling.ipynb  final_score.ipynb  franchise_crawling.py  main.py  navermap_crawling.py  scoring.py  tasks.py
eagle_eye/archive/: blueribbon_crawling.py  navermap_crawling.py  navermap_crawling_chrome.ipynb  navermap_crawling_firefox.ipynb  navermap_crawling_old.ipynb  navermap_crawling_ver1.ipynb  save_seoul_hotspot.py  scoring.ipynb  similarity_only.ipynb
eagle_eye/crawling/: blueribbon_crawling.py  datepop_analysis.ipynb  datepop_crawling.ipynb  final_score.ipynb  franchise_crawling.py  haversine.py  instagram_crawling.py  load_bluer.py  load_hotspots.py  load_seoul_hotspot.py  main.py  navermap_crawling.ipynb  navermap_crawling.py  navermap_crawling_firefox.ipynb  scoring.py
eagle_eye/crawling/archive/: calculate_score_old.py  instagram_crawling.py
eagle_eye/crawling/data/: franchise.csv  polygon.ipynb  save_seoul_hotspot.py  shop.csv
eagle_eye/data/: seoul_hotspots.csv
eagle_eye/data/datepop/: shop.xlsx  (+2 more)
eagle_eye/utils/: calculate_score.py  check_franchise.py  convert_str_to_number.py  get_instagram_link.py  haversine.py  is_within_date.py  load_bluer.py  load_datepop.py  load_hotspots.py
project/api/: __init__.py  image.py
project/cloudinary_app/: admin.py  apps.py  models.py  urls.py  views.py
project/config/: settings.py  urls.py
project/myenv/: pyvenv.cfg
(+100 files in other folders)
