[tool.poetry]
name = "eagle-eye"
version = "0.1.0"
description = ""
authors = ["Kimcheolhui <cjfgml0306@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
numpy = "^1.26.2"
ipykernel = "^6.27.1"
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
statsmodels = "^0.14.1"
missingno = "^0.5.2"
nltk = "^3.8.1"
soynlp = "^0.0.493"
selenium = "^4.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
