[tool.poetry]
name = "eagle-eye"
version = "0.1.0"
description = ""
authors = ["Kimcheolhui <cjfgml0306@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
celery = "^5.3.6"
selenium = "4.17.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
numpy = "^1.26.2"
shapely = "^2.0.2"
webdriver-manager = "^4.0.1"
django = "^5.0.7"
django-ninja = "^1.2.2"
httpx = "^0.27.0"

[tool.poetry.group.local.dependencies]
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
statsmodels = "^0.14.1"
ipykernel = "^6.27.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
